hide homepage cards on mobile + fix homepage mobile margin

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -201,6 +201,14 @@ footer .nav-link:hover {
   margin-bottom: 0;
 }
 
+@media (max-width: 576px) {
+  .aboutme-text {
+    margin: auto
+  }
+
+
+}
+
 /*
   =================================
   Qualifications & Skills
